--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -111,3 +111,24 @@ input[type="submit"] {
 input[type="submit"]:hover {
     background-color: #0056b3;
 }
+
+/* Estilos para dispositivos móveis */
+@media (max-width: 768px) {
+    ul.menu-bar {
+        flex-direction: column;
+        /* Alinhe verticalmente os itens do menu */
+        align-items: stretch;
+    }
+
+    ul.menu-bar li {
+        margin: 5px 0; /* Espaçamento entre os itens do menu */
+    }
+
+    ul.menu-bar li a {
+        padding: 10px; /* Reduza o tamanho dos itens do menu */
+    }
+
+    form {
+        max-width: 100%; /* Ocupar toda a largura da tela */
+    }
+}
