--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -9,13 +9,21 @@ ul.menu-bar {
     display: flex;
     justify-content: center;
     align-items: center;
+    /* Defina uma altura máxima para evitar que a barra de rolagem apareça em telas grandes */
+    max-height: 60px; /* Ajuste conforme necessário */
+    /* Ative a rolagem horizontal apenas quando necessário */
+    overflow-x: auto;
+}
+
+ul.menu-bar li {
+    margin: 0 5px; /* Espaçamento entre os itens do menu */
 }
 
 ul.menu-bar li a {
     display: block;
     color: rgb(0, 0, 0);
     text-align: center;
-    padding: 14px 16px;
+    padding: 10px; /* Reduza o tamanho dos itens do menu */
     text-decoration: none;
 }
 
@@ -67,68 +75,12 @@ body {
     /* Espaçamento entre a imagem e o nome */
 }
 
-body {
-    font-family: Arial, sans-serif;
-}
-
-form {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-}
-
-label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: bold;
-}
-
-input[type="text"],
-textarea {
-    width: 100%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-
-textarea {
-    resize: vertical;
-}
-
-input[type="submit"] {
-    background-color: #007BFF;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 3px;
-    cursor: pointer;
-}
-
-input[type="submit"]:hover {
-    background-color: #0056b3;
-}
-
 /* Estilos para dispositivos móveis */
 @media (max-width: 768px) {
     ul.menu-bar {
-        flex-direction: column;
-        /* Alinhe verticalmente os itens do menu */
-        align-items: stretch;
-    }
-
-    ul.menu-bar li {
-        margin: 5px 0; /* Espaçamento entre os itens do menu */
-    }
-
-    ul.menu-bar li a {
-        padding: 10px; /* Reduza o tamanho dos itens do menu */
-    }
-
-    form {
-        max-width: 100%; /* Ocupar toda a largura da tela */
+        flex-direction: row; /* Reverta para o layout de linha */
+        justify-content: flex-start; /* Alinhe os itens à esquerda */
+        align-items: center;
+        overflow-x: auto; /* Ative a rolagem horizontal apenas quando necessário */
     }
 }
