cor alterada do background

--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -64,7 +64,7 @@ form textarea {
 }
 
 form input[type="submit"] {
-    background-color: #333;
+    background-color: #ffffff;
     color: #fff;
     padding: 10px 20px;
     border: none;
