Atualização da cor do background

--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -74,5 +74,5 @@ form input[type="submit"] {
 }
 
 form input[type="submit"]:hover {
-    background-color: #555;
+    background-color: #ffffff;
 }
