--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -59,7 +59,7 @@ form textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
-    border: 1px solid #ccc;
+    border: 1px solid #ffffff;
     border-radius: 5px;
 }
 
