--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -2,7 +2,7 @@
 .menu-bar {
     list-style-type: none;
     padding: 0;
-    background-color: #333;
+    background-color: #ffffff;
     text-align: center;
     max-height: 50px; /* Altura máxima desejada */
     overflow-x: auto; /* Adicionar barra de rolagem horizontal, se necessário */
