--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -30,24 +30,28 @@ ul {
     text-align: left;
 }
 
-h2,
+/* Estilos para títulos */
+h2 {
+    font-size: 24px;
+    font-weight: bold;
+    color: #333; /* Cor personalizada */
+}
+
+/* Estilos para parágrafos */
 p {
-    text-align: left;
+    font-size: 16px;
+    line-height: 1.5;
+    color: #666; /* Cor personalizada */
 }
 
-h3 {
-    text-align: center;
-}
-
-body {
-    font-family: Arial, sans-serif;
-}
-
+/* Adicione uma sombra sutil */
 .container {
     text-align: center;
     margin-top: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra suave */
 }
 
+/* Estilos para o autor */
 .author {
     display: inline-block;
     text-align: center;
@@ -56,6 +60,7 @@ body {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Adicione uma sombra sutil */
 }
 
 .profile-image {
