--- a/docs/Pages/orcamento.css
+++ b/docs/Pages/orcamento.css
@@ -50,12 +50,16 @@ ul.menu-bar li a:hover {
 
 /* Estilos para o formulário */
 form {
-  max-width: 100%;
+  max-width: 400px; /* Define uma largura máxima para o formulário */
+  margin: 0 auto; /* Centralize horizontalmente */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* Centralize verticalmente */
   padding: 20px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  margin: 0 auto; /* Centralize horizontalmente */
 }
 
 label {
