--- a/docs/Pages/produtos.css
+++ b/docs/Pages/produtos.css
@@ -8,35 +8,55 @@
     <title>Projeto HTML 2023 - Padaria Casa dos Pãezinhos</title>
     <script src="./produtos.js"></script>
     <style>
-        /* Estilos para a barra de menus */
-        ul.menu-bar {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
-            overflow: hidden;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            max-height: 60px;
-            overflow-x: auto;
-        }
+       /* Estilos para a barra de menus */
+ul.menu-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    background-color: #ffffff;
+    overflow: hidden;
+    /* Adicione as propriedades de flexbox para centralizar */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* Defina uma altura máxima para evitar que a barra de rolagem apareça em telas grandes */
+    max-height: 60px; /* Ajuste conforme necessário */
+    /* Ative a rolagem horizontal apenas quando necessário */
+    overflow-x: auto;
+}
 
-        ul.menu-bar li {
-            margin: 0 5px;
-        }
+ul.menu-bar li {
+    margin: 0 5px; /* Espaçamento entre os itens do menu */
+}
 
-        ul.menu-bar li a {
-            display: block;
-            color: rgb(0, 0, 0);
-            text-align: center;
-            padding: 10px;
-            text-decoration: none;
-        }
+ul.menu-bar li a {
+    display: block;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    padding: 10px; /* Reduza o tamanho dos itens do menu */
+    text-decoration: none;
+}
 
-        ul.menu-bar li a:hover {
-            background-color: #555;
-        }
+ul.menu-bar li a:hover {
+    background-color: #555;
+}
+
+ul {
+    text-align: left;
+}
+
+h2,
+p {
+    text-align: left;
+}
+
+h3 {
+    text-align: center;
+}
+
+body {
+    font-family: Arial, sans-serif;
+}
 
         body {
             font-family: Arial, sans-serif;
