--- a/docs/Pages/produtos.css
+++ b/docs/Pages/produtos.css
@@ -61,12 +61,12 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f5f5f5;
+    background-color: #ffff;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
+    background-color: #fff;
+    color: #000;
     text-align: center;
     padding: 20px;
 }
