--- a/docs/Pages/carrinho.css
+++ b/docs/Pages/carrinho.css
@@ -89,9 +89,11 @@ h4 {
 .menu-item {
     background-color: #fff;
     border: 1px solid #ccc;
-    padding: 10px;
-    margin: 10px 0;
+    padding: 100px;
+    margin: 100px 0;
     display: flex;
+    margin-left: 100px;
+    margin-right: 100px;
     flex-direction: column;
     align-items: center;
 }
